[package]
name = "hash_cons"
authors = ["Karan Ahluwalia <karan9123@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A type-safe hash consing library"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["single-threaded"]
single-threaded = []
thread-safe = []

[dev-dependencies]
rand = "0.8.5"

[dependencies]