[package]
name = "hash_cons"
authors = ["Karan Ahluwalia <karan9123@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A type-safe hash consing library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/karan9123/hash_cons"
homepage = "https://github.com/karan9123/hash_cons"
documentation = "https://docs.rs/hash_cons"
keywords = ["hash", "cons", "hash-cons", "intern", "interning", "interning-table", "memoization", "hash_cons", "hashcons"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["single-threaded"]
single-threaded = []
thread-safe = []

[dev-dependencies]
rand = "0.8.5"

[dependencies]