[package]
name = "hash_cons"
authors = ["Karan Ahluwalia <karan9123@gmail.com>"]
version = "0.2.0"
edition = "2024"
description = "A type-safe hash-cons library."
readme = "README.md"
license = "MIT"
repository = "https://github.com/karan9123/hash_cons"
homepage = "https://github.com/karan9123/hash_cons"
documentation = "https://docs.rs/hash_cons"
keywords = ["hash-cons", "interning", "memoization", "hash_cons", "hashcons"]
categories = ["data-structures", "caching", "memory-management", "asynchronous"]
exclude = [".github", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["auto-cleanup"]
thread-safe = []
auto-cleanup = []

[dev-dependencies]
rand = "0.8.5"

[dependencies]